# healthins

./: Dockerfile  README.md  app.yaml  pyproject.toml
.github/workflows/: deploy-app-engine.yaml  deploy-cloud-function.yaml  test.yaml
app/: .docker-env  config.py  main.py  models.py  pyproject.toml  routes.py  schemas.py  test_schemas.py
app/common/: api_request.py  data_source_abstract.py  gcp_storage.py  publisher.py  test_api_request.py
app/healthins_api/: health_insurance_statistics.py  params_builder.py  test_params_builder.py
cloud_functions/parse-healthins-data/: example_data.py  main.py  pyproject.toml  requirements.txt  schemas.py
