[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["José Nunes <josenunesra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
google-cloud-pubsub = "^2.21.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
flake8 = "^7.0.0"
autoflake = "^2.3.1"
isort = "^5.13.2"
black = "^24.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
